# esco

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
corpus/starter/: README.md
infra/: README.md  compose.yaml
infra/migrations/: 0001_create_audit_entries.sql
resources/: README.md
resources/adrs/: 0001-private-core-vs-transparent-surface.md  0002-language-boundary-strategy.md  README.md
resources/archive/: 2026-04-10-root-readme-archive.md
resources/contracts/: README.md  corpus-and-retrieval-contract.md  local-model-selection.md  memory-and-audit-contract.md  verification-and-policy-contract.md
resources/plans/: phase-3-linear-tasks.json
resources/roadmaps/: esco-implementation-plan.md  esco-phased-roadmap.md
resources/schemas/: README.md  domain-records.schema.json  event-envelope.schema.json
resources/validation/: phase-0-validation-matrix.md
src/: README.md  esco_cli.py
src/esco_audit/: __init__.py  interfaces.py  models.py  service.py  testing.py
src/esco_contracts/: README.md  __init__.py  constants.py  models.py
src/esco_orchestrator/: README.md  __init__.py  builder.py  models.py  service.py
src/esco_policy/: README.md  __init__.py  models.py  service.py
src/esco_retrieval/: README.md  __init__.py  interfaces.py  service.py  testing.py
tests/: README.md  __init__.py  bootstrap.py  test_adapters_gemma.py  test_audit_service.py  test_cli.py  test_contracts.py  test_model_registry.py  test_orchestrator_service.py  test_policy_service.py  test_retrieval_service.py  test_verifier_service.py
(+11 files in other folders)
