[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "esco"
version = "0.1.0"
description = "ESCO local-first platform scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
